# open-snippet

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 2026-05-29-openmacro-design.md  2026-05-29-openmacro-prd.md  logging.md
docs/plans/: 2026-06-06-comprehensive-logging-design.md  2026-06-12-manual-trigger-and-fixes-design.md
openmacro/: .eslintrc.cjs  package.json  pnpm-lock.yaml
openmacro/snippets/: default.yaml
openmacro/src/: main.tsx
openmacro/src-tauri/: Cargo.toml  tauri.conf.json
openmacro/src-tauri/src/: lib.rs
openmacro/src-tauri/src/commands/: form.rs  mod.rs  prefs.rs  snippets.rs  sync.rs
openmacro/src-tauri/src/engine/: mod.rs  orchestrator.rs
openmacro/src-tauri/src/expand/: mod.rs  resolver.rs
openmacro/src-tauri/src/form/: mod.rs
openmacro/src-tauri/src/hook/: mod.rs  thread.rs  winevent.rs
openmacro/src-tauri/src/inject/: clipboard.rs  mod.rs  sendinput.rs
openmacro/src-tauri/src/matcher/: mod.rs
openmacro/src-tauri/src/store/: loader.rs  mod.rs  model.rs  watcher.rs
openmacro/src-tauri/src/sync/: mod.rs
openmacro/src-tauri/tests/: commands_roundtrip.rs  cursor_math.rs  expand_resolver.rs  form_focus.rs  prefs_roundtrip.rs  shell_runner.rs  store_yaml.rs  sync_roundtrip.rs
snippets/: default.yaml
src/: App.css  App.tsx  colors_and_type.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crash.rs  lib.rs  main.rs
src-tauri/tests/: commands_logging.rs  commands_roundtrip.rs  cursor_math.rs  expand_resolver.rs  form_focus.rs  loader_prefix.rs  log_init_filter.rs  log_init_redact.rs  (+13 more)
(+185 files in other folders)
